--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -597,8 +597,8 @@
     <string name="what_is_tarrakki_zyaada_details">
         When you park your money in Tarrakki Zyaada, your money will be invested in the Nippon India Liquid Fund, which can give you potentially higher returns than your Bank Savings Account or a Fixed Deposit.
         \n\nWith your Tarrakki Zyaada investment, you get a Nippon Anytime Money Card, powered by HDFC Bank and Visa. This card enables you to use the money you have invested, should you want to. You can link this card to your online shopping account, use it for your Uber/Ola rides, and even book movie tickets online. It literally acts like a Bank Debit Card.
-        \n\nThis card is linked to your investment in Nippon India Liquid Fund and allows you to instantly withdraw or spend money against your Mutual Fund invested. This card is valid at Visa enabled ATMs and merchant outlets all over India. There are no charges of using the card at any ATM or Visa point of sale in India. Tarrakki charges a one-time card processing fee of Rs 200 when you apply for the Visa Debit Card. These fees help us provide you the best customer support.
-        \n\nIt\'s like parking your idle money in a Savings Bank Account, but with the opportunity to earn almost double the returns.
+        \n\nThis card is linked to your investment in Nippon India Liquid Fund and allows you to instantly withdraw or spend money against your Mutual Fund invested. This card is valid at Visa enabled ATMs and merchant outlets all over India. There are no charges of using the card at any ATM or Visa point of sale in India.
+        \n\nIt\'s like parking your money in a bank savings account, but with the opportunity to earn almost double the returns.
     </string>
     <string name="where_is_my_money_invested">Where is my money invested?</string>
 
