--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -594,6 +594,7 @@
     <string name="name_on_card_">Name on Card*</string>
     <string name="mothers_maiden_name">Mothers Maiden Name*</string>
     <string name="what_is_tarrakki_zyaada">What is Tarrakki Zyaada?</string>
+    <string name="your_card_will_sent_via_mail">Your card will be sent via mail to the address mentioned in your KYC application starting with</string>
     <string name="what_is_tarrakki_zyaada_details">
         When you park your money in Tarrakki Zyaada, your money will be invested in the Nippon India Liquid Fund, which can give you potentially higher returns than your Bank Savings Account or a Fixed Deposit.
         \n\nWith your Tarrakki Zyaada investment, you get a Nippon Anytime Money Card, powered by HDFC Bank and Visa. This card enables you to use the money you have invested, should you want to. You can link this card to your online shopping account, use it for your Uber/Ola rides, and even book movie tickets online. It literally acts like a Bank Debit Card.
