--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -598,7 +598,7 @@
     <string name="what_is_tarrakki_zyaada_details">
         When you park your money in Tarrakki Zyaada, your money will be invested in the Nippon India Liquid Fund, which can give you potentially higher returns than your Bank Savings Account or a Fixed Deposit.
         \n\nWith your Tarrakki Zyaada investment, you get a Nippon Anytime Money Card, powered by HDFC Bank and Visa. This card enables you to use the money you have invested, should you want to. You can link this card to your online shopping account, use it for your Uber/Ola rides, and even book movie tickets online. It literally acts like a Bank Debit Card.
-        \n\nThis card is linked to your investment in Nippon India Liquid Fund and allows you to instantly withdraw or spend money against your Mutual Fund invested. This card is valid at Visa enabled ATMs and merchant outlets all over India. There are no charges of using the card at any ATM or Visa point of sale in India.
+        \n\nThis card is linked to your investment in Nippon India Liquid Fund and allows you to instantly withdraw or spend money against your Mutual Fund investment. This card is valid at Visa enabled ATMs and merchant outlets all over India. There are no charges of using the card at any ATM or Visa point of sale in India. Tarrakki charges a one-time card processing fee of Rs %s when you apply for the Visa Debit Card. These fees help us provide you the best customer support.
         \n\nIt\'s like parking your money in a bank savings account, but with the opportunity to earn almost double the returns.
     </string>
     <string name="where_is_my_money_invested">Where is my money invested?</string>
@@ -706,7 +706,7 @@
     <string name="redeemed_amount">Redeemed amount</string>
     <string name="insta_redeem_is_not_availble">Insta-Redemption is currently not available for this folio.</string>
     <string name="do_you_want_to_enable_app_security">Do you want to enable screen lock?</string>
-    <string name="debit_cart_request_sent">We have received your request for a debit card.</string>
+    <string name="debit_cart_request_sent">We have received your request for a debit card. Your debit card will be delivered to your KYC registered address in 10-15 working days.</string>
     <string name="success_">Success!</string>
     <string name="to_be_confirmed">To be confirmed</string>
     <string name="thank_you">Thank you!</string>
