--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -818,9 +818,9 @@
     <string name="earn_to_returns">Earn 7% to 11% returns</string>
     <string name="highly_diversified">Highly diversified</string>
     <string name="rbi_registered_p2p_nbfc">RBI Registered P2P-NBFC</string>
-    <string name="returns_of_investment">Returns of Investment</string>
-    <string name="minimum_amount">Minimum Amount</string>
-    <string name="lock_in_period">Lock-in Period</string>
+    <string name="returns_of_investment">Returns of investment</string>
+    <string name="minimum_amount">Minimum amount</string>
+    <string name="lock_in_period">Lock-in period</string>
     <string name="your_liquiloans_portfolio">Your Liquiloans Portfolio</string>
     <string name="invest_in_consumer_loans">Invest in Consumer Loans</string>
     <string name="liquiloans">Liquiloans</string>
