[FIX]#145 - Work on UI changes given by Nishant. - Work on NetBanking Issue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -818,7 +818,7 @@
     <string name="earn_to_returns">Earn up to 7% - 10.5% Annualised</string>
     <string name="highly_diversified">Highly diversified</string>
     <string name="rbi_registered_p2p_nbfc">RBI Registered P2P-NBFC</string>
-    <string name="returns_of_investment">Returns of investment</string>
+    <string name="returns_of_investment">Returns on Investment</string>
     <string name="minimum_amount">Minimum amount</string>
     <string name="lock_in_period">Lock-in period</string>
     <string name="your_liquiloans_portfolio">Your Liquiloans Portfolio</string>
