--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,7 @@
     <string name="forgot_password_">Forgot Password?</string>
     <string name="or">Or</string>
     <string name="login_with">Login with</string>
+    <string name="signup_with">Sign Up with</string>
     <string name="google">Google</string>
     <string name="facebook">Facebook</string>
     <string name="don_t_have_an_account_yet_get_started">Don\'t have an account yet? <font color='#4EB95D'>Get Started</font></string>
