--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -422,6 +422,8 @@
     <string name="update">Update</string>
     <string name="please_sign_clearly">Please sign clearly and legibly on a clean, white paper. Your signature must match the signature your provided at the time of KYC.</string>
     <string name="make_the_first_investment_of_sip_today">Make the first investment of SIP today.</string>
+    <string name="prime_rating">Prime Rating:</string>
+    <string name="prime_recommennd">Prime Recommendation:</string>
     <string name="number_of_unites_redeemed">Number of Units redeemed</string>
     <string name="amount_will_be_credited_in_2_4_business_days_depending_on_the_amc">Amount will be credited in 1-3 business days depending on the AMC.</string>
     <string name="withdraw_to_your_bank_account">Withdraw to your Bank Account:</string>
@@ -808,8 +810,11 @@
     <string name="on_call_appointment">On Call Appointment with a Wealth Manager (Monthly)</string>
     <string name="portfolio_analytics">Portfolio Analytics</string>
     <string name="choose_plan">Choose a plan</string>
-    <string name="six_month">6 Month</string>
+    <string name="months"> Months</string>
+    <string name="total_price">Total Price </string>
     <string name="three_month">3 Month</string>
+
+
 
     <string name="equity_advisory">Equity Advisory</string>
     <string name="what_is_equity_advisory">What is Equity Advisory?</string>
