Change Static Content in Equity Screen, Set up a call with the advisor - set Ram's calendly link ,Tarrakki MF Assitant - The free reviews do not decrease bug fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -836,7 +836,7 @@
     <string name="sebi_registered_investment">SEBI Registered Investment Advisor (neither brokers nor associated with stock market intermediaries)</string>
     <string name="unbiased_research">Unbiased research &amp; advisory</string>
     <string name="well_researched">Well researched stock ideas</string>
-    <string name="complete_control">Complete control of your broking account</string>
+    <string name="complete_control">You have complete control of your broking account</string>
 
 
     <string name="model_portfolio">Model portfolio of 15–25 stocks</string>
