--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -423,11 +423,15 @@
     <string name="please_sign_clearly">Please sign clearly and legibly on a clean, white paper. Your signature must match the signature your provided at the time of KYC.</string>
     <string name="make_the_first_investment_of_sip_today">Make the first investment of SIP today.</string>
     <string name="prime_rating">Prime Rating:</string>
-    <string name="prime_recommennd">Prime Recommendation:</string>
+    <string name="prime_recommennd">Prime Review:</string>
     <string name="no_free_trial_left">You have no free reviews left.</string>
     <string name="free_reviews_use_alert">You have %1$s free reviews left. Are you sure you want to use your free reviews?</string>
     <string name="free_review_use_alert">You have %1$s free review left. Are you sure you want to use your free review?</string>
-    <string name="recommendation_sell_alert">Prime Recommendation for this fund:SELL\nAre you sure you would like to invest?</string>
+    <string name="recommendation_sell_alert">
+            Prime Review for this fund: %1$s
+       <br></br>
+            Are you sure you would like to invest?
+    </string>
     <string name="number_of_unites_redeemed">Number of Units redeemed</string>
     <string name="amount_will_be_credited_in_2_4_business_days_depending_on_the_amc">Amount will be credited in 1-3 business days depending on the AMC.</string>
     <string name="withdraw_to_your_bank_account">Withdraw to your Bank Account:</string>
@@ -817,7 +821,6 @@
     <string name="months"> Months</string>
     <string name="total_price">Total Price \u20B9</string>
     <string name="three_month">3 Month</string>
-
 
 
     <string name="equity_advisory">Equity Advisory</string>
