--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,8 +191,12 @@
     <string name="we_have_sent_otp">We have sent you OTP on %1$s</string>
     <string name="did_not_receive_otp">Didn\'t Receive OTP?</string>
     <string name="resend">Resend</string>
+    <string name="resend_otp_alert">The OTP you generated has been sent to you. Please do not share your OTP with anyone.</string>
     <string name="send_otp_via_call">Send OTP via call</string>
+    <string name="call_submitted">Call submitted successfully.</string>
     <string name="we_promise_not_spam">We promise not spam you</string>
+    <string name="you_are_on_final_step">You are on the final step for registration</string>
+    <string name="enter_otp_sent_on_your_mobile">Enter OTP sent on your registered mobile number</string>
     <string name="continues">Continue</string>
     <string name="enter_email_address_otp">Enter email address OTP</string>
     <string name="enter_mobile_otp">Enter mobile number OTP</string>
@@ -471,6 +475,11 @@
     <string name="pls_enter_valid_email_address">Please enter a valid Email Address.</string>
     <string name="pls_enter_password">Please enter Password.</string>
     <string name="pls_enter_mobile_number">Please enter Mobile Number.</string>
+    <string name="pls_enter_first_name">Please enter First Name.</string>
+    <string name="pls_enter_last_name">Please enter Last Name.</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="set_password">Set Password</string>
+    <string name="create_a_new_password">Create a new password</string>
     <string name="pls_enter_valid_indian_mobile_number">Please enter a valid Indian Mobile Number.</string>
     <string name="pls_enter_valid_mobile_number_or_email">Please enter a valid Email or Indian Mobile Number.</string>
     <string name="pls_enter_confirm_password">Please enter Confirm Password.</string>
